Styles: prepare to using css variables

--- a/Actions/Button/variables.module.scss
+++ b/Actions/Button/variables.module.scss
@@ -1,20 +1,20 @@
 @import "@/ui/constants/styles/globalColors.module.scss";
 
-$buttonPrimaryBackgroundColor: $MAIN_PRIMARY_ACTION_COLOR;
-$buttonPrimaryBackgroundColorHover: $MAIN_PRIMARY_ACTION_HOVER_COLOR;
-$buttonSecondaryBackgroundColorHover: $MAIN_SECONDARY_ACTION_COLOR;
-$buttonSecondaryBackgroundColor: $MAIN_SECONDARY_ACTION_HOVER_COLOR;
-$buttonSuccessBackgroundColor: $MAIN_SEA_ACTION_COLOR;
-$buttonSuccessBackgroundColorHover: $MAIN_SEA_ACTION_HOVER_COLOR;
-$buttonSuccessFontColor: $MAIN_SEA_ACTION_FONT_COLOR;
-$buttonRemoveBackgroundColor: $MAIN_ORANGE_ACTION_COLOR;
-$buttonRemoveBackgroundColorHover: $MAIN_ORANGE_ACTION_HOVER_COLOR;
-$buttonRemoveFontColor: $MAIN_ORANGE_ACTION_FONT_COLOR;
-$buttonCancelBackgroundColor: $MAIN_YELLOW_ACTION_COLOR;
-$buttonCancelBackgroundColorHover: $MAIN_YELLOW_ACTION_HOVER_COLOR;
-$buttonCancelFontColor: $MAIN_YELLOW_ACTION_FONT_COLOR;
+$buttonPrimaryBackgroundColor: var(--colorActionPrimary);
+$buttonPrimaryBackgroundColorHover: var(--colorActionPrimaryHover);
+$buttonSecondaryBackgroundColorHover: var(--colorActionSecondary);
+$buttonSecondaryBackgroundColor: var(--colorActionSecondaryHover);
+$buttonSuccessBackgroundColor: var(--colorActionSuccess);
+$buttonSuccessBackgroundColorHover: var(--colorActionSuccessHover);
+$buttonSuccessFontColor: var(--colorActionSuccessFont);
+$buttonRemoveBackgroundColor: var(--colorActionRemove);
+$buttonRemoveBackgroundColorHover: var(--colorActionRemoveHover);
+$buttonRemoveFontColor: var(--colorActionRemoveFont);
+$buttonCancelBackgroundColor: var(--colorActionCancel);
+$buttonCancelBackgroundColorHover: var(--colorActionCancelHover);
+$buttonCancelFontColor: var(--colorActionCancelFont);
 $borderSize: 1px;
-$fontColor: $DEFAULT_WHITE_TEXT_COLOR;
+$fontColor: var(--colorTextWhite);
 $fontSize: 16px;
 $padding: 12px 24px;
 $onlyIconPadding: 8px;
