--- a/Form/Checkbox/styles.module.scss
+++ b/Form/Checkbox/styles.module.scss
@@ -1,52 +1,52 @@
 @import "./variables.module.scss";
 
 .checkbox-container {
-  min-height: $DEFAULT_FORMS_ELEMENT_HEIGHT;
-  max-height: $DEFAULT_FORMS_ELEMENT_HEIGHT;
+  min-height: var(--sizeFormElementHeight);
+  max-height: var(--sizeFormElementHeight);
   box-sizing: border-box;
   display: flex;
   align-items: center;
   width: 100%;
   cursor: pointer;
   .checkbox-icon-container {
-    min-width: $DEFAULT_FORMS_ELEMENT_HEIGHT / 2;
-    min-height: $DEFAULT_FORMS_ELEMENT_HEIGHT / 2;
-    max-width: $DEFAULT_FORMS_ELEMENT_HEIGHT / 2;
-    max-height: $DEFAULT_FORMS_ELEMENT_HEIGHT / 2;
+    min-width: var(--sizeFormElementHeightSmall);
+    min-height: var(--sizeFormElementHeightSmall);
+    max-width: var(--sizeFormElementHeightSmall);
+    max-height: var(--sizeFormElementHeightSmall);
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid $FORM_BORDER_COLOR;
-    border-radius: $DEFAULT_FORMS_BORDER_RADIUS / 2;
+    border: 1px solid var(--colorFormBorder);
+    border-radius: var(--borderRadiusSmall);
 
     .checkbox-partial-icon {
-      min-width: $DEFAULT_FORMS_ELEMENT_HEIGHT / 4;
-      min-height: $DEFAULT_FORMS_ELEMENT_HEIGHT / 4;
-      max-width: $DEFAULT_FORMS_ELEMENT_HEIGHT / 4;
-      max-height: $DEFAULT_FORMS_ELEMENT_HEIGHT / 4;
-      background-color: $MAIN_PRIMARY_ACTION_COLOR;
+      min-width: var(--sizeFormElementHeightCheck);
+      min-height: var(--sizeFormElementHeightCheck);
+      max-width: var(--sizeFormElementHeightCheck);
+      max-height: var(--sizeFormElementHeightCheck);
+      background-color: var(--colorActionPrimary);
     }
 
     .checkbox-icon {
-      color: $MAIN_PRIMARY_ACTION_COLOR;
-      font-size: $DEFAULT_FORMS_ELEMENT_HEIGHT / 2 !important;
+      color: var(--colorActionPrimary);
+      font-size: var(--sizeFormElementHeightSmall) !important;
     }
   }
   &:hover {
     .checkbox-icon-container {
-      border-color: $MAIN_PRIMARY_ACTION_COLOR;
-      background-color: $MAIN_PRIMARY_ACTION_ACTIVE_COLOR;
+      border-color: var(--colorActionPrimary);
+      background-color: var(--colorLinkActive);
     }
   }
   &.disabled {
     cursor: default;
     .checkbox-icon-container {
-      border-color: $FORM_DISABLED_BACKGROUND;
+      border-color: var(--colorFormBackgroundDisabled);
       .checkbox-partial-icon {
-        background-color: $FORM_DISABLED_BACKGROUND;
+        background-color: var(--colorFormBackgroundDisabled);
       }
       .checkbox-icon {
-        color: $FORM_DISABLED_BACKGROUND;
+        color: var(--colorFormBackgroundDisabled);
       }
     }
     &:hover {
@@ -57,11 +57,11 @@
   }
   &.error {
     .checkbox-icon-container {
-      border-color: $FORM_ERROR_BORDER_COLOR;
+      border-color: var(--colorFormBorderError);
     }
   }
   .checkbox-label {
-    margin-left: $DEFAULT_LAYOUT_ITEMS_GAP / 2;
+    margin-left: var(--spacingItemsOnSameLevel);
   }
   input {
     display: none;
