--- a/Form/Field/styles.module.scss
+++ b/Form/Field/styles.module.scss
@@ -25,7 +25,7 @@
   .form-field-error {
     color: $errorColor;
     position: absolute;
-    padding-left: $DEFAULT_FORMS_ELEMENT_CONTENT_SIDES_PADDING / 2;
+    padding-left: var(--spacingFormElementSides) / 2;
     bottom: -1.1rem;
   }
 }
