--- a/Form/Field/variables.module.scss
+++ b/Form/Field/variables.module.scss
@@ -2,4 +2,4 @@
 @import "@/ui/constants/styles/globalSizes.module.scss";
 @import "@/ui/constants/styles/globalVariables.module.scss";
 
-$errorColor: $MAIN_ORANGE_ACTION_COLOR;
+$errorColor: var(--colorActionRemove);
