--- a/Layout/Brick/styles.module.scss
+++ b/Layout/Brick/styles.module.scss
@@ -3,7 +3,7 @@
 @layer basic-ui {
   .brick {
     background: $brickBackground;
-    border-radius: $DEFAULT_BORDER_RADIUS;
+    border-radius: var(--borderRadius);
     box-sizing: border-box;
 
     &.flex {
