--- a/Layout/Brick/variables.module.scss
+++ b/Layout/Brick/variables.module.scss
@@ -2,10 +2,9 @@
 @import "@/ui/constants/styles/globalSizes.module.scss";
 @import "@/ui/constants/styles/globalVariables.module.scss";
 
-$brickBackground: $BLOCK_BACKGROUND;
-$brickPadding: $DEFAULT_CONTENT_TOP_BOTTOM_PADDING
-  $DEFAULT_CONTENT_SIDES_PADDING;
-$brickMediumPadding: $DEFAULT_CONTENT_TOP_BOTTOM_PADDING_MEDIUM
-  $DEFAULT_CONTENT_SIDES_PADDING_MEDIUM;
-$brickSmallPadding: $DEFAULT_CONTENT_TOP_BOTTOM_PADDING_SMALL
-  $DEFAULT_CONTENT_SIDES_PADDING_SMALL;
+$brickBackground: var(--colorBackgroundBlock);
+$brickPadding: var(----spacingContentBlockTop) var(--spacingContentBlockSides);
+$brickMediumPadding: var(--spacingContentBlockTopMedium)
+  var(--spacingContentBlockSidesMedium);
+$brickSmallPadding: var(--spacingContentBlockTopSmall)
+  var(--spacingContentBlockSidesSmall);
