--- a/Layout/Foundation/variables.module.scss
+++ b/Layout/Foundation/variables.module.scss
@@ -1,4 +1,4 @@
 @import "@/ui/constants/styles/globalColors.module.scss";
 @import "@/ui/constants/styles/globalSizes.module.scss";
 
-$foundationBackground: $BACKGROUND;
+$foundationBackground: var(--colorBackgroundMain);
