--- a/Presentation/Demo/variables.module.scss
+++ b/Presentation/Demo/variables.module.scss
@@ -2,13 +2,13 @@
 @import "@/ui/constants/styles/globalSizes.module.scss";
 @import "@/ui/constants/styles/globalVariables.module.scss";
 
-$demoContentPadding: $DEFAULT_CONTENT_TOP_BOTTOM_PADDING
-  $DEFAULT_CONTENT_SIDES_PADDING;
-$demoMediumContentPadding: $DEFAULT_CONTENT_TOP_BOTTOM_PADDING_MEDIUM
-  $DEFAULT_CONTENT_SIDES_PADDING_MEDIUM;
-$demoSmallContentPadding: $DEFAULT_CONTENT_TOP_BOTTOM_PADDING_SMALL
-  $DEFAULT_CONTENT_SIDES_PADDING_SMALL;
-$demoActionPanelPadding: $DEFAULT_LISTS_ITEM_TOP_BOTTOM_PADDING
-  $DEFAULT_CONTENT_SIDES_PADDING;
-$demoActionPanelBorder: 2px solid $DARKER_BLOCK_BACKGROUND;
+$demoContentPadding: var(--spacingContentBlockTop)
+  var(--spacingContentBlockSides);
+$demoMediumContentPadding: var(--spacingContentBlockTopMedium)
+  var(--spacingContentBlockSidesMedium);
+$demoSmallContentPadding: var(--spacingContentBlockTopSmall)
+  var(--spacingContentBlockSidesSmall);
+$demoActionPanelPadding: var(--spacingListItemTop)
+  var(--spacingContentBlockSides);
+$demoActionPanelBorder: 2px solid var(--colorBackgroundBlockDarker);
 $demoActionPanelButtonPadding: 8px;
