--- a/Presentation/Loader/variables.module.scss
+++ b/Presentation/Loader/variables.module.scss
@@ -1,5 +1,5 @@
 @import "@/ui/constants/styles/globalColors.module.scss";
 @import "@/ui/constants/styles/globalVariables.module.scss";
 
-$color: $MAIN_PRIMARY_ACTION_COLOR;
+$color: var(--colorActionPrimary);
 $alternativeColor: #000;
