--- a/Skeleton/PopupContainer/variables.module.scss
+++ b/Skeleton/PopupContainer/variables.module.scss
@@ -2,4 +2,4 @@
 @import "@/ui/constants/styles/globalSizes.module.scss";
 @import "@/ui/constants/styles/globalVariables.module.scss";
 
-$maskBackgroundColor: $DEFAULT_MASK_OVERLAY_BACKGROUND;
+$maskBackgroundColor: var(--colorBackgroundMaskOverlay);
