--- a/constants/styles/globalSizes.module.scss
+++ b/constants/styles/globalSizes.module.scss
@@ -14,16 +14,19 @@ $DEFAULT_OUTER_TOP_BOTTOM_PADDING: 70px;
 $DEFAULT_OUTER_TOP_BOTTOM_PADDING_MEDIUM: 50px;
 $DEFAULT_OUTER_TOP_BOTTOM_PADDING_SMALL: 20px;
 $DEFAULT_CONTENT_SIDES_PADDING: 50px;
+$DEFAULT_CONTENT_SIDES_PADDING_HALF: $DEFAULT_CONTENT_SIDES_PADDING / 2;
 $DEFAULT_CONTENT_SIDES_PADDING_MEDIUM: 30px;
 $DEFAULT_CONTENT_SIDES_PADDING_SMALL: 20px;
 $DEFAULT_CONTENT_TOP_BOTTOM_PADDING: 40px;
+$DEFAULT_CONTENT_TOP_BOTTOM_PADDING_HALF: $DEFAULT_CONTENT_TOP_BOTTOM_PADDING /
+  2;
 $DEFAULT_CONTENT_TOP_BOTTOM_PADDING_MEDIUM: 30px;
 $DEFAULT_CONTENT_TOP_BOTTOM_PADDING_SMALL: 20px;
-$DEFAULT_INNER_CONTENT_MARGIN: 10px;
-$DEFAULT_INNER_CONTENT_MARGIN_MEDIUM: 5px;
 $DEFAULT_BORDER_RADIUS: 16px;
 $DEFAULT_SMALL_BORDER_RADIUS: 4px;
 $DEFAULT_ITEMS_MARGIN: 20px;
+$DEFAULT_ITEMS_MARGIN_SMALL: 10px;
+$DEFAULT_ITEMS_MARGIN_TINY: 5px;
 $DEFAULT_LAYOUT_ITEMS_GAP: 20px;
 // lists
 $DEFAULT_LISTS_OUTER_SIDES_PADDING: 16px;
@@ -33,5 +36,25 @@ $DEFAULT_LISTS_ITEM_TOP_BOTTOM_PADDING: 9px;
 // forms
 $DEFAULT_FORMS_BORDER_RADIUS: 10px;
 $DEFAULT_FORMS_ELEMENT_HEIGHT: 53px;
+$DEFAULT_FORMS_ELEMENT_SMALL_HEIGHT: round($DEFAULT_FORMS_ELEMENT_HEIGHT / 2);
+$DEFAULT_FORMS_ELEMENT_CHECK_HEIGHT: round($DEFAULT_FORMS_ELEMENT_HEIGHT / 4);
 $DEFAULT_FORMS_ELEMENT_CONTENT_SIDES_PADDING: 28px;
+$DEFAULT_FORMS_ELEMENT_LABEL_TRANSFORM_SCALE: 0.75;
+$DEFAULT_FORMS_ELEMENT_CONTENT_SIDES_PADDING_HALF: $DEFAULT_FORMS_ELEMENT_CONTENT_SIDES_PADDING /
+  2;
+$DEFAULT_FORMS_ELEMENT_CONTENT_SIDES_PADDING_TRANSFORMED: $DEFAULT_FORMS_ELEMENT_CONTENT_SIDES_PADDING *
+  $DEFAULT_FORMS_ELEMENT_LABEL_TRANSFORM_SCALE;
+$DEFAULT_FORMS_ELEMENT_CONTENT_ICON_ADDITIONAL_PADDING: $DEFAULT_FORMS_ELEMENT_CONTENT_SIDES_PADDING;
+$DEFAULT_FORMS_ELEMENT_CONTENT_CLEAR_ADDITIONAL_PADDING: $DEFAULT_FORMS_ELEMENT_CONTENT_SIDES_PADDING /
+  2;
+$DEFAULT_FORMS_ELEMENT_CONTENT_SIDES_PADDING_WITH_ICON: $DEFAULT_FORMS_ELEMENT_CONTENT_SIDES_PADDING +
+  $DEFAULT_FORMS_ELEMENT_CONTENT_ICON_ADDITIONAL_PADDING;
+$DEFAULT_FORMS_ELEMENT_CONTENT_SIDES_PADDING_WITH_ICON_AND_CLEAR: $DEFAULT_FORMS_ELEMENT_CONTENT_SIDES_PADDING +
+  $DEFAULT_FORMS_ELEMENT_CONTENT_ICON_ADDITIONAL_PADDING +
+  $DEFAULT_FORMS_ELEMENT_CONTENT_CLEAR_ADDITIONAL_PADDING;
 $DEFAULT_FORMS_ELEMENT_CONTENT_TOP_BOTTOM_PADDING: 14px;
+$DEFAULT_FORMS_ELEMENT_CONTENT_TOP_BOTTOM_PADDING_TRANSFORMED: -1 *
+  $DEFAULT_FORMS_ELEMENT_CONTENT_TOP_BOTTOM_PADDING *
+  $DEFAULT_FORMS_ELEMENT_LABEL_TRANSFORM_SCALE;
+$DEFAULT_FORMS_ELEMENT_CONTENT_TOP_BOTTOM_PADDING_HALF: $DEFAULT_FORMS_ELEMENT_CONTENT_TOP_BOTTOM_PADDING /
+  2;
