--- a/Layout/Beam/styles.module.scss
+++ b/Layout/Beam/styles.module.scss
@@ -1,5 +1,3 @@
-@import "./variables.module.scss";
-
 @layer basic-ui {
   .beam {
     width: 100%;
@@ -9,7 +7,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     flex: 0 1 auto;
-    gap: $beamGap;
+    gap: var(--spacingDifferentItems);
 
     .center {
       justify-content: center;
@@ -40,7 +38,7 @@
     }
 
     .bottom-gap {
-      margin-bottom: $beamGap;
+      margin-bottom: var(--spacingDifferentItems);
     }
 
     &.no-gap {
